--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
-python:
-  - "2.7"
+python:  
+  - "2.7"  
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: python setup.py
+install:
+  - "pip install cython"
 # command to run tests, e.g. python setup.py test
 script:  make test
