--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - "pip install cython"
+  - "python setup.py"
 # command to run tests, e.g. python setup.py test
 script:  make test
