--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - "pip install cython"
-  - "python setup.py"
+  - "python setup.py build"
+  - "python setup.py install"
 # command to run tests, e.g. python setup.py test
 script:  make test
