--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - "pip install cython"
-  - "python setup.py build"
-  - "python setup.py install"
+  - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl"
+  - "sudo apt-get update"
+  - "sudo apt-get install libpcl-all"
 # command to run tests, e.g. python setup.py test
 script:  make test
