--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - "pip install cython"
-  - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl"
+  - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl -y"
   - "sudo apt-get update"
   - "sudo apt-get install libpcl-all"
 # command to run tests, e.g. python setup.py test
