--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - "pip install cython"
+  - "wget -c 'http://sourceforge.net/projects/boost/files/boost/1.54.0/boost_1_54_0.tar.bz2/download'"
+  - "tar xf download"
+  - "cd boost_1_54_0/"
+  - "./bootstrap.sh"
+  - "./b2 install"
   - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl -y"
   - "sudo apt-get update"
   - "sudo apt-get install libpcl-all"
