--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - "tar xf download"
   - "cd boost_1_54_0/" # We specifically need this version of Boost, Ubuntu 12.04 is too far behind
   - "./bootstrap.sh >/dev/null"
-  - "./b2 install >/dev/null"
+  - "./b2 install |grep gcc.compile.c++"
   - "cd .."
   - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl -y"
   - "sudo apt-get update"
