--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ install:
   - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl -y"
   - "sudo apt-get update"
   - "sudo apt-get install libpcl-all"
+  - "ldd pcl/registration.so"
+  - "env"
 # command to run tests, e.g. python setup.py test
 script:  make test
