--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,10 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - "pip install cython -q"
-  - "wget -c -q 'http://sourceforge.net/projects/boost/files/boost/1.54.0/boost_1_54_0.tar.bz2/download'"
-  - "tar xf download"
-  - "cd boost_1_54_0/" # We specifically need this version of Boost, Ubuntu 12.04 is too far behind
-  - "./bootstrap.sh >/dev/null"
-  - "./b2 install |grep gcc.compile.c++"
-  - "cd .."
   - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl -y"
   - "sudo apt-get update"
   - "sudo apt-get install libpcl-all"
+  - "ldd pcl/registration.so"
+  - "env"
 # command to run tests, e.g. python setup.py test
 script:  make test
