--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - "sudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl -y"
   - "sudo apt-get update"
   - "sudo apt-get install libpcl-all"
+  - "make all"
   - "pwd"
   - "ls"
   - "ldd pcl/registration.so"
